--- a/src/management_system/templates/management_system/single_item.html
+++ b/src/management_system/templates/management_system/single_item.html
@@ -28,6 +28,7 @@
           
             <ul class="list-group list-group-flush">
               <li class="list-group-item"><b>Kategoria:</b> {{item.category}}</li>
+              <li class="list-group-item"><b>Data:</b> {{item.created}}</li>
               <li class="list-group-item"><b>Producent:</b> {{item.item_producent}}</li>
               <li class="list-group-item"><b>Model:</b> {{item.item_model}}</li>
               <li class="list-group-item"><b>Numer S/N:</b> {{item.item_sn}}</li>
