--- a/src/management_system/templates/management_system/items.html
+++ b/src/management_system/templates/management_system/items.html
@@ -20,6 +20,7 @@
       <tr>
         <th scope="col"></th>
         <th scope="col">Typ</th>
+        <th scope="col">Data</th>
         <th scope="col">Producent</th>
         <th scope="col">Model</th>
         <th scope="col">IT</th>
@@ -51,6 +52,9 @@
         </td>
         <td>
           <span>{{item.category}}</span>
+        </td>
+        <td>
+          <span>{{item.created}}</span>
         </td>
         <td>
           <span>{{item.item_producent}}</span>
