--- a/src/management_system/templates/management_system/single_employee_items.html
+++ b/src/management_system/templates/management_system/single_employee_items.html
@@ -54,6 +54,7 @@
       <thead>
         <tr>
           <th scope="col">Typ</th>
+          <th scope="col">Date</th>
           <th scope="col">Producent</th>
           <th scope="col">Model</th>
           <th scope="col">IT</th>
@@ -70,6 +71,9 @@
             <span>{{item.category}}</span>
           </td>
           <td>
+            <span>{{item.created}}</span>
+          </td>
+         <td>
             <span>{{item.item_producent}}</span>
           </td>
           <td class="align-middle">
