* advanced not adwanced

--- a/src/management_system/templates/management_system/items_add_new.html
+++ b/src/management_system/templates/management_system/items_add_new.html
@@ -13,7 +13,7 @@
 
   <!-- Using the formset -->
   {{ itemForm|crispy }}
-  <button class="btn btn-secondary" type="button" onclick="toggleAdwanced()">Zaawansowane</button>
+  <button class="btn btn-secondary" type="button" onclick="toggleAdvanced()">Zaawansowane</button>
   <div id="div_id_item_user" class="form-group">
     <label for="id_item_user">Pracownik</label>
     <div>
@@ -59,13 +59,13 @@
             }
           });
 
-          // Hide adwanced options
+          // Hide advanced options
           let div_id_item_user = document.getElementById('div_id_item_user');
           div_id_item_user.style.display = "none";
         });
 
         let shown = false;
-        function toggleAdwanced(){
+        function toggleAdvanced(){
           let div_id_item_user = document.getElementById('div_id_item_user');
           if(shown){
             div_id_item_user.style.display = "none";
