--- a/src/management_system/templates/management_system/main.css
+++ b/src/management_system/templates/management_system/main.css
@@ -38,10 +38,10 @@ nav a{
 
 .popup-cnt{
 	position: absolute;
-	top: 33%;
+	top: 30%;
 	left: 30%;
 	width: 40%;
-	height: 33%;
+	height: 40%;
 	background-color: #f5f5f5;
 	text-align: center;
 	padding: 10px;
@@ -51,6 +51,9 @@ nav a{
 .popup-title{
 	width: 100%;
 	height: 2rem;
+	white-space: nowrap;
+	overflow-x: auto;
+	overflow-y: hidden;
 }
 
 .popup-msg{
