--- a/src/management_system/templates/management_system/main.css
+++ b/src/management_system/templates/management_system/main.css
@@ -42,10 +42,10 @@ nav a{
 
 .popup-cnt{
 	position: absolute;
-	top: 30%;
-	left: 30%;
-	width: 40%;
-	height: 40%;
+	top: 30vh;
+	left: calc((100vw - (40vh * 1.62)) / 2);
+	width: calc(40vh * 1.62);
+	height: 40vh;
 	background-color: #f5f5f5;
 	text-align: center;
 	padding: 10px;
@@ -54,7 +54,7 @@ nav a{
 
 .popup-title{
 	width: 100%;
-	height: 2rem;
+	height: 3rem;
 	white-space: nowrap;
 	overflow-x: auto;
 	overflow-y: hidden;
@@ -62,7 +62,7 @@ nav a{
 
 .popup-msg{
 	width: 100%;
-	height: calc(100% - 5rem);
+	height: calc(100% - 6rem);
 	overflow: auto;
 	text-align: left;
 }
