Popup layout: display flex

--- a/src/management_system/templates/management_system/new_protocol_add.html
+++ b/src/management_system/templates/management_system/new_protocol_add.html
@@ -49,7 +49,7 @@
 <!-- <span class="popup" id="popup1" onclick="closePopup('popup1')"> -->
 <span class="popup" id="popup1">
   <span class="popup-cnt">
-    <h3 class="popup-title">Czy na pewno chcesz utworzyc nowe przekazanie?</h3>
+    <section class="popup-title">Czy na pewno chcesz utworzyc nowe przekazanie?</section>
     <section class="popup-msg" id="popup1table">
       <table class="table w-100"></table>
     </section>
@@ -62,7 +62,7 @@
 <!-- <span class="popup" id="popup2" onclick="closePopup('popup2')"> -->
 <span class="popup" id="popup2">
   <span class="popup-cnt">
-    <h3 class="popup-title">Pole pracownik jest wymagane</h3>
+    <section class="popup-title">Pole pracownik jest wymagane</section>
     <section class="popup-msg"></section>
     <section class="popup-btns">
       <button type="button" onclick="closePopup('popup2')" class="btn btn-success mx-3">OK</button>
@@ -72,7 +72,7 @@
 <!-- <span class="popup" id="popup3" onclick="closePopup('popup3')"> -->
 <span class="popup" id="popup3">
   <span class="popup-cnt">
-    <h3 class="popup-title">Pole przedmiot jest wymagane.</h3>
+    <section class="popup-title">Pole przedmiot jest wymagane.</section>
     <section class="popup-msg"></section>
     <section class="popup-btns">
       <button type="button" onclick="closePopup('popup3')" class="btn btn-success mx-3">OK</button>
@@ -82,7 +82,7 @@
 <!-- <span class="popup" id="popup4" onclick="closePopup('popup4')"> -->
 <span class="popup" id="popup4">
   <span class="popup-cnt">
-    <h3 class="popup-title">Zduplikowany przedmiot.</h3>
+    <section class="popup-title">Zduplikowany przedmiot.</section>
     <section class="popup-msg" id="popup4msg"></section>
     <section class="popup-btns">
       <button type="button" onclick="closePopup('popup4')" class="btn btn-success mx-3">OK</button>
