--- a/src/management_system/templates/management_system/main.css
+++ b/src/management_system/templates/management_system/main.css
@@ -41,28 +41,35 @@ nav a{
 }
 
 .popup-cnt{
+	--popup-cnt-height: 50vh;
 	position: absolute;
 	top: 30vh;
-	left: calc((100vw - (40vh * 1.62)) / 2);
-	width: calc(40vh * 1.62);
-	height: 40vh;
+	left: calc((100vw - (var(--popup-cnt-height) * 1.62)) / 2);
+	width: calc(var(--popup-cnt-height) * 1.62);
+	height: var(--popup-cnt-height);
 	background-color: #f5f5f5;
 	text-align: center;
-	padding: 10px;
+	padding: 1rem;
 	border-radius: 10px;
+	display: flex;
+	flex-flow: row wrap;
 }
 
-.popup-title{
+.popup-title-nowrap{
 	width: 100%;
-	height: 3rem;
 	white-space: nowrap;
 	overflow-x: auto;
 	overflow-y: hidden;
 }
 
+.popup-title{
+	font-size: 2rem;
+	width: 100%;
+}
+
 .popup-msg{
 	width: 100%;
-	height: calc(100% - 6rem);
+	max-height: calc(100% - 8rem);
 	overflow: auto;
 	text-align: left;
 }
@@ -70,6 +77,8 @@ nav a{
 .popup-btns{
 	width: 100%;
 	height: 3rem;
+	/* padding: 0.5rem; */
+	align-self: flex-end;
 }
 
 .popup-column{
