--- a/src/management_system/templates/management_system/new_protocol_add.html
+++ b/src/management_system/templates/management_system/new_protocol_add.html
@@ -53,7 +53,7 @@
     <section class="popup-msg" id="popup1table">
       <table class="table w-100"></table>
     </section>
-    <section class="popup-btns">
+    <section class="popup-btns pt-1">
       <button type="button" onclick="send()" class="btn btn-success mx-3">Tak</button>
       <button type="button" onclick="closePopup('popup1')" class="btn btn-danger mx-3">Nie</button>
     </section>
