styles inside static, added new app for API, proper API with searching and authentication

--- a/src/management_system/templates/management_system/new_protocol_add.html
+++ b/src/management_system/templates/management_system/new_protocol_add.html
@@ -46,10 +46,10 @@
 
 
 <button type="button" class="btn btn-primary mt-3" onclick="step()">
-  Zapisz (Bootstrap ver.)
+  Zapisz
 </button>
 
-    <button type="button" onclick="step()" class="btn btn-success mt-3" name="saveAndEnd">Zapisz</button>
+    <!-- <button type="button" onclick="step()" class="btn btn-success mt-3" name="saveAndEnd">Zapisz</button> -->
     <button type="button" onclick="addItem()" class="btn btn-secondary mt-3" name="saveAndContinue">Dodaj Kolejny</button>
 </form>
 <!-- <span class="popup" id="popup1" onclick="closePopup('popup1')"> -->
