--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -20,7 +20,7 @@
                 $('#search-employee').select2();
             });
         </script>
-        <link rel="Stylesheet" href="{% url 'MainCSS' %}" />
+        <link rel="Stylesheet" href="{% static 'css/main.css' %}" />
     </head>
     <body>
         <div class="container-fluid">
@@ -41,7 +41,7 @@
         });
     </script>
     <script>
-        // DaserTwo's popups
+        // popups
         function showPopup(id){
             document.getElementById(id).style.display = "block";
         }
