--- a/src/management_system/templates/management_system/new_protocol_add.html
+++ b/src/management_system/templates/management_system/new_protocol_add.html
@@ -42,43 +42,28 @@
         {% endfor %}
     </div>
 {% endif %}
-     
-
-
-<button type="button" class="btn btn-primary mt-3" onclick="step()">
-  Zapisz
-</button>
-
+    <button type="button" class="btn btn-primary mt-3" onclick="step()">Zapisz</button>
     <!-- <button type="button" onclick="step()" class="btn btn-success mt-3" name="saveAndEnd">Zapisz</button> -->
     <button type="button" onclick="addItem()" class="btn btn-secondary mt-3" name="saveAndContinue">Dodaj Kolejny</button>
 </form>
 <!-- <span class="popup" id="popup1" onclick="closePopup('popup1')"> -->
-
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Czy na pewno chcesz utworzyć protokół?</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-
-          <div class="container-fluid" id="modalRowsContainer">>
-
-            
-          </div>
-
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary" onclick="send()">Utwórz</button>
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zamknij</button>
-        </div>
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Czy na pewno chcesz utworzyć protokół?</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="container-fluid" id="modalRowsContainer"></div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" onclick="send()">Utwórz</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zamknij</button>
       </div>
     </div>
   </div>
-
-
-
+</div>
 <span class="popup" id="popup1">
   <span class="popup-cnt">
     <section class="popup-title">Czy na pewno chcesz utworzyc nowe przekazanie?<hr /></section>
@@ -134,6 +119,7 @@
         // item_user true because value of that field is null, we dont want to search used items
         return {
           item_user: true,
+          utilization_id: true,
           search: params.term,
           limit: 10
         }
@@ -158,7 +144,6 @@
         delay: 300,
         dataType: 'json',
         data: function(params){
-          // We send only query as 'q' and limit = 10
           return {
             search: params.term,
             limit: 10
@@ -232,16 +217,22 @@
   modalRowsContainer.innerHTML += headerRow;
   
     for (let e of seen) {
-      let res = await fetch(`{% url 'API2Items' %}?id=${e}`);
+      let res = await fetch(`{% url 'item-list' %}${e}`);
       let data = await res.json();
-      data = data[0];
-      
+      console.log(data);
+
       // Create a new row div
       let rowDiv = document.createElement('div');
       rowDiv.className = 'row';
       
       // Create and append individual columns
-      ['category', 'item_it', 'item_sn', 'item_kk'].forEach(field => {
+      {
+        let colDiv = document.createElement('div');
+        colDiv.className = 'col-3 mt-3';
+        colDiv.textContent = data.category.category_name;
+        rowDiv.appendChild(colDiv);
+      }
+      ['item_it', 'item_sn', 'item_kk'].forEach(field => {
         let colDiv = document.createElement('div');
         colDiv.className = 'col-3 mt-3';
         colDiv.textContent = data[field];
