--- a/src/management_system/templates/management_system/new_protocol_add.html
+++ b/src/management_system/templates/management_system/new_protocol_add.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div id="div_id_item" class="form-group">
-       <label for="search-items" class=" requiredField">Item<span class="asteriskField">*</span> </label> 
+       <label for="search-items" class=" requiredField">Przedmiot<span class="asteriskField">*</span> </label> 
        <div data-select2-id="select2-data-28-4whr"> 
          <select name="item" class="w-25 m-2 select form-control select2-hidden-accessible" id="search-items" required="" tabindex="-1" aria-hidden="true" data-select2-id="select2-data-search-items"> 
           <option value="" selected="" data-select2-id="select2-data-10-iflm">---------</option>
