Utitlization does not send form anymore

--- a/src/management_system/templates/management_system/utilization_add_item.html
+++ b/src/management_system/templates/management_system/utilization_add_item.html
@@ -10,8 +10,16 @@
     <!-- Security token -->
     {% csrf_token %}
  
+<div id="div_id_item" class="form-group">
+       <label for="search-items" class=" requiredField">Przedmiot<span class="asteriskField">*</span> </label> 
+       <div data-select2-id="select2-data-28-4whr"> 
+         <select name="item" class="w-25 m-2 select form-control select2-hidden-accessible" id="search-items" required="" tabindex="-1" aria-hidden="true" data-select2-id="select2-data-search-items"> 
+          <option value="" selected="" data-select2-id="select2-data-10-iflm">---------</option>
+         </select>
+       </div> 
+    </div>
     <!-- Using the formset -->
-    {{ utilizationForm|crispy }}
+    {% comment %}{{ utilizationForm|crispy }} {% endcomment %}
     <hr>
     {% if messages %}
     <div class="alert alert-danger">
