--- a/src/management_system/templates/management_system/single_employee_protocols.html
+++ b/src/management_system/templates/management_system/single_employee_protocols.html
@@ -24,7 +24,7 @@
       {% if key == protocol.id %}
       <tr class="fw-normal">
         <td>
-          <span>{{protocol.created|date:"d/m/Y"}}</span>
+          <span>{{protocol.created|date:"d.m.Y G:i:s"}}</span>
         </td>
         <td class="align-middle">
           <span>{{protocol.employee}}</span>
