--- a/src/management_system/templates/management_system/single_protocol.html
+++ b/src/management_system/templates/management_system/single_protocol.html
@@ -51,7 +51,7 @@
               <span>{{item.item_id.category}}</span>
             </td>  
             <td>
-              <span>{{item.item_id.created}}</span>
+              <span>{{item.item_id.created|date:"d.m.Y G:i:s"}}</span>
             </td>          
             <td>
               <span>{{item.item_id.item_producent}}</span>
