--- a/src/management_system/templates/management_system/single_utilization.html
+++ b/src/management_system/templates/management_system/single_utilization.html
@@ -80,12 +80,12 @@
           </div>
           <div id="profile" role="tabpanel" aria-labelledby="profile-tab" class="tab-pane fade px-4 py-5">
             <ul class="list-group list-group-flush">
-              <li class="list-group-item"><b>Data utworzenia:</b> {{utilization.created}}</li>
+              <li class="list-group-item"><b>Data utworzenia:</b> {{utilization.created|date:"d.m.Y"}}</li>
               <li class="list-group-item"><b>DZM:</b> {{utilization.inform_dzm|yesno:"Tak,Nie"}}</li>
               <li class="list-group-item"><b>Liczba sprzetu:</b> {{items.count}}</li>
               {% if utilization.company_transfer_date %}
                 <li class="list-group-item"><b>Firma utylizacyjna:</b> {{utilization.utilization_company}}</li>
-                <li class="list-group-item"><b>Data oddania do utylizacji:</b> {{utilization.company_transfer_date}}</li>
+                <li class="list-group-item"><b>Data oddania do utylizacji:</b> {{utilization.company_transfer_date|date:"d.m.Y"}}</li>
               {% endif %}
               {% if utilization.utilization_protocol_scan %}
                 <a class="btn btn-success mb-1" href="{% url 'singleUtilizationScan' utilization.id %}" role="button" >PDF</a>
