small fixes in date format, new styles

--- a/src/management_system/templates/management_system/home.html
+++ b/src/management_system/templates/management_system/home.html
@@ -4,25 +4,25 @@
 {% block content %}
 
 
-<h1>HOME</h1>
+<h1>Strona startowa</h1>
 <hr />
 
 <section id="main_panel">
 	<section class="panel-pad" id="protocols">
-		<section class="panel panel-light fill">
-			<h2 class="panel-title">Protokoly</h2>
+		<section class="panel fill">
+			<h2 class="panel-title">Ostatnie protokoły</h2>
 			<section class="panel-cnt" id="protocols_cnt"></section>
 		</section>
 	</section>
 	<section id="panel_grp">
 		<section class="panel-pad" id="alerts">
-			<section class="panel panel-light fill">
-				<h2 class="panel-title">ALERTY</h2>
-				<section class="panel-cnt" style="background-color: red;"></section>
+			<section class="panel  fill">
+				<h2 class="panel-title">Powiadomienia</h2>
+				<section class="panel-cnt"></section>
 			</section>
 		</section>
 		<section class="panel-pad" id="last_added">
-			<section class="panel panel-light fill">
+			<section class="panel fill">
 				<h2 class="panel-title">Ostatnio dodane przedmioty</h2>
 				<section class="panel-cnt" id="last_added_cnt"></section>
 			</section>
