--- a/src/management_system/templates/management_system/items.html
+++ b/src/management_system/templates/management_system/items.html
@@ -54,7 +54,7 @@
           <span>{{item.category}}</span>
         </td>
         <td>
-          <span>{{item.created|date:"d.m.Y G:i:s"}}</span>
+          <span>{{item.created|date:"d.m.Y G:i"}}</span>
         </td>
         <td>
           <span>{{item.item_producent}}</span>
