--- a/src/management_system/templates/management_system/single_protocol.html
+++ b/src/management_system/templates/management_system/single_protocol.html
@@ -6,7 +6,7 @@
 
 
 
-  <h2>{{protocol.is_return|yesno:"Zwrot,Przekazanie"}} dla {{protocol.employee}} z {{protocol.created|date:"d.m.Y G:i:s"}}</h2>
+  <h2>{{protocol.is_return|yesno:"Zwrot,Przekazanie"}} dla {{protocol.employee}} z {{protocol.created|date:"d.m.Y G:i"}}</h2>
   <b>Sporządzony przez:  </b>{{protocol.created_by.first_name}} {{protocol.created_by.last_name}}<br><br>
   <form action="{% url 'protocolRaportToPrint' %}" method="get">
     <button class="btn btn-dark  me-5" role="button" type="submit" name='protocol' value='{{protocol.id}}'>Drukuj</button>
@@ -51,7 +51,7 @@
               <span>{{item.item_id.category}}</span>
             </td>  
             <td>
-              <span>{{item.item_id.created|date:"d.m.Y G:i:s"}}</span>
+              <span>{{item.item_id.created|date:"d.m.Y G:i"}}</span>
             </td>          
             <td>
               <span>{{item.item_id.item_producent}}</span>
@@ -90,7 +90,7 @@
         <li class="list-group-item"><b>Barcode:</b> {{protocol.barcode}}</li>
         <li class="list-group-item"><b>Osoba odbierająca:</b> <a  class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="{%url 'singleEmployee' protocol.employee.id%}"role="button">{{protocol.employee}}</li></a>
         <li class="list-group-item"><b>Informatyk:</b> {{protocol.created_by.first_name}} {{protocol.created_by.last_name}}</li>
-        <li class="list-group-item"><b>Data przekazania:</b> {{protocol.created|date:"d.m.Y G:i:s"}}</li>
+        <li class="list-group-item"><b>Data przekazania:</b> {{protocol.created|date:"d.m.Y G:i"}}</li>
         <li class="list-group-item"><b>Typ:</b> {{protocol.is_return|yesno:"Zwrot,Przekazanie"}}</li>
         <li class="list-group-item"><b>Lokalizacja:</b> {{protocol.employee.user_location}}</li>
         <li class="list-group-item"><b>Dział:</b> {{protocol.employee.user_department}}</li>
